--- a/perfil.css
+++ b/perfil.css
@@ -1,5 +1,6 @@
 body {
     background: white;
+    margin: auto;
 }
 
 
@@ -26,6 +27,7 @@ body {
     margin: 0;
     margin-bottom: 15px;
     border-radius: 5px;
+    max-width: 900px;
 }
 
 .post_content {
@@ -35,8 +37,15 @@ body {
 
 .post_image {
     margin-bottom: 15px;
+    width: 100%;
 }
 
 .contact_list {
     list-style-type: square;
+}
+
+.contact_list li a {
+    color: blue;
+    font-size: 10px;
+    font-family: Arial, Helvetica, sans-serif;
 }
